# lydia

./: README.md
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7c95aab656b0_adds_token_expires_at_to_user_model.py  82bfd5ed2525_user_model_change.py  b4dcca4df2b5_changes_to_models.py  cfe70ccefeac_initialise_models.py
backend/app/: config.py  db.py  main.py
backend/app/api/routes/: payman_oauth.py  telegram_webhook.py
backend/app/models/: __init__.py  attempt.py  game_session.py  prize_pool.py  problem.py  user.py
backend/app/schemas/: attempt.py  game_session.py  prize_pool.py  problem.py  user.py
backend/app/scripts/: seed_problem.py  set_ai_challenge.py
backend/app/services/: game_service.py  gemini_service.py  payman_service.py  problem_bank_service.py  telegram_service.py
payman-service/: .gitignore  index.mjs  package.json  tokenManager.mjs
